--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@
                 <div class="right">
                     <h2>TecnoBlog</h2>
                     <p>La creatividad y la energía son el motor que alimenta el alma.</p>
-                    <p>No dejes de crear, y tómate un momento para observar la belleza que nos brinda la madre tierra
+                    <p>No dejes de crear, y tómate un momento para observar la belleza que nos brinda la madre tierra.
                         <br>Mantente en sintonía para nuevo contenido.</p>
                 </div>
                 <div class="image">
