--- a/index1.html
+++ b/index1.html
@@ -79,6 +79,37 @@
                 </div>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <div class="graffiti-bar">
+        <div class="track">
+            <span class="word style1">CREATIVIDAD</span>
+            <span class="word style2">CONCENTRACION</span>
+            <span class="word style3">PACIENCIA</span>
+            <span class="word style4">DESCANSO</span>
+            <span class="word style5">EXPERIMENTAR</span>
+            <span class="word style6">OBSERVAR</span>
+            <span class="word style7">PROGRESAR</span>
+            <span class="word style8">IMAGINAR</span>
+            <span class="word style9">PRACTICAR</span>
+            <span class="word style10">DISCIPLINA</span>
+
+            <!-- 🔥 Copia exacta del bloque para el loop perfecto -->
+            <span class="word style1">CREATIVIDAD</span>
+            <span class="word style2">CONCENTRACION</span>
+            <span class="word style3">PACIENCIA</span>
+            <span class="word style4">DESCANSO</span>
+            <span class="word style5">EXPERIMENTAR</span>
+            <span class="word style6">OBSERVAR</span>
+            <span class="word style7">PROGRESAR</span>
+            <span class="word style8">IMAGINAR</span>
+            <span class="word style9">PRACTICAR</span>
+            <span class="word style10">DISCIPLINA</span>
+        </div>
+        </div>
+        <br>
+        <br>
     </main>
     <script src="js/script.js"></script>
 </body>
