--- a/hacking.html
+++ b/hacking.html
@@ -52,6 +52,8 @@
                 <p>Checa los posts disponibles con consejos, tendencias, noticias sobre seguridad informática, metodologías, herramientas y más.</p>
             </div>
         </div>
+
+
         <!-- Primer artículo -->
         <div class="article-section">
             <img src="media/hack2.png" alt="OWASP" class="article-image">
@@ -117,7 +119,7 @@
         <div class="article-section">
             <img src="media/hack2.png" alt="En proceso" class="article-image">
             <h2><a href="hacking/unknown.html">En proceso</a></h2>
-        </div>  
+        </div>
         <br>
         <br>  
         <div class="buttons__cover">
@@ -139,7 +141,34 @@
             </div>
         </div>  
         <br>
-        <p>.</p> 
+        <div class="graffiti-bar">
+        <div class="track">
+            <span class="word style1">CREATIVIDAD</span>
+            <span class="word style2">CONCENTRACION</span>
+            <span class="word style3">PACIENCIA</span>
+            <span class="word style4">DESCANSO</span>
+            <span class="word style5">EXPERIMENTAR</span>
+            <span class="word style6">OBSERVAR</span>
+            <span class="word style7">PROGRESAR</span>
+            <span class="word style8">IMAGINAR</span>
+            <span class="word style9">PRACTICAR</span>
+            <span class="word style10">DISCIPLINA</span>
+
+            <!-- 🔥 Copia exacta del bloque para el loop perfecto -->
+            <span class="word style1">CREATIVIDAD</span>
+            <span class="word style2">CONCENTRACION</span>
+            <span class="word style3">PACIENCIA</span>
+            <span class="word style4">DESCANSO</span>
+            <span class="word style5">EXPERIMENTAR</span>
+            <span class="word style6">OBSERVAR</span>
+            <span class="word style7">PROGRESAR</span>
+            <span class="word style8">IMAGINAR</span>
+            <span class="word style9">PRACTICAR</span>
+            <span class="word style10">DISCIPLINA</span>
+        </div>
+        </div>
+        <br>
+        <br>
     </main>
     <script src="js/script.js"></script>
 </body>
