--- a/electronica.html
+++ b/electronica.html
@@ -118,8 +118,10 @@
                 </div>
             </div>
         </div>
-        <br>
-        <br>
+        <div class="br-container">
+            <br>
+            <br>
+        </div>
         <div class="graffiti-bar">
         <div class="track">
             <span class="word style1">CREATIVIDAD</span>
