--- a/hacking.html
+++ b/hacking.html
@@ -140,7 +140,9 @@
                 </div>
             </div>
         </div>  
-        <br>
+        <div class="br-container">
+            <br>
+        </div>
         <div class="graffiti-bar">
         <div class="track">
             <span class="word style1">CREATIVIDAD</span>
