--- a/ia.html
+++ b/ia.html
@@ -138,12 +138,13 @@
                 </div>
             </div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
+        <div class="br-container">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+        </div>
         <div class="graffiti-bar">
         <div class="track">
             <span class="word style1">CREATIVIDAD</span>
