--- a/index1.html
+++ b/index1.html
@@ -79,9 +79,11 @@
                 </div>
             </div>
         </div>
-        <br>
-        <br>
-        <br>
+        <div class="br-container">
+            <br>
+            <br>
+            <br>
+        </div>
         <div class="graffiti-bar">
         <div class="track">
             <span class="word style1">CREATIVIDAD</span>
