--- a/network.html
+++ b/network.html
@@ -210,7 +210,9 @@
                 </div>
             </div>
         </div>
-        <br>
+        <div class="br-container">
+            <br>
+        </div>
         <div class="graffiti-bar">
         <div class="track">
             <span class="word style1">CREATIVIDAD</span>
