--- a/ia.html
+++ b/ia.html
@@ -171,7 +171,9 @@
             <span class="word style10">DISCIPLINA</span>
         </div>
         </div>
-        <br>
+        <div class="br-container">
+            <br>
+        </div>
         <br>      
     </main>
     <script src="js/script.js"></script>
